--- a/roadrecon/frontend/src/app/appmain/applications/applications.component.html
+++ b/roadrecon/frontend/src/app/appmain/applications/applications.component.html
@@ -38,9 +38,9 @@
       <td mat-cell *matCellDef="let row"><span *ngIf="row.oauth2Permissions.length > 0">{{row.oauth2Permissions.length}}</span></td>
     </ng-container>
 
-    <ng-container matColumnDef="owner">
+    <ng-container matColumnDef="ownerUsers">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Custom owner</th>
-      <td mat-cell *matCellDef="let row"><mat-icon *ngIf="row.owner.length > 0" aria-hidden="false" aria-label="Yes">check</mat-icon></td>
+      <td mat-cell *matCellDef="let row"><mat-icon *ngIf="row.ownerUsers.length + row.ownerServicePrincipals > 0" aria-hidden="false" aria-label="Yes">check</mat-icon></td>
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
