--- a/roadrecon/frontend/src/app/appmain/applications/applicationsdialog/applicationsdialog.component.html
+++ b/roadrecon/frontend/src/app/appmain/applications/applicationsdialog/applicationsdialog.component.html
@@ -14,14 +14,14 @@
       </table>
     </mat-card>
     <mat-divider></mat-divider>
-    <mat-expansion-panel *ngIf="application.owner.length > 0"  expanded>
+    <mat-expansion-panel *ngIf="application.ownerUsers.length > 0"  expanded>
       <mat-expansion-panel-header>
         <mat-panel-title>
-          Owners ({{ application.owner.length }})
+          Owners ({{ application.ownerUsers.length }})
         </mat-panel-title>
       </mat-expansion-panel-header>
 
-      <table mat-table [dataSource]="application.owner">
+      <table mat-table [dataSource]="application.ownerUsers">
         <ng-container matColumnDef="displayName">
           <th mat-header-cell *matHeaderCellDef>Name</th>
           <td mat-cell *matCellDef="let row"><a [routerLink]="['/users/', row.objectId]">{{row.displayName}}</a></td>
