--- a/roadrecon/frontend/src/app/appmain/serviceprincipals/serviceprincipalsdialog/serviceprincipalsdialog.component.html
+++ b/roadrecon/frontend/src/app/appmain/serviceprincipals/serviceprincipalsdialog/serviceprincipalsdialog.component.html
@@ -16,14 +16,14 @@
       </table>
     </mat-card>
     <mat-divider></mat-divider>
-    <mat-expansion-panel *ngIf="sp.owner.length > 0"  expanded>
+    <mat-expansion-panel *ngIf="sp.ownerUsers.length > 0"  expanded>
       <mat-expansion-panel-header>
         <mat-panel-title>
-          Owners ({{ sp.owner.length }})
+          Owners ({{ sp.ownerUsers.length }})
         </mat-panel-title>
       </mat-expansion-panel-header>
 
-      <table mat-table [dataSource]="sp.owner">
+      <table mat-table [dataSource]="sp.ownerUsers">
         <ng-container matColumnDef="displayName">
           <th mat-header-cell *matHeaderCellDef>Name</th>
           <td mat-cell *matCellDef="let row"><a [routerLink]="['/users/', row.objectId]">{{row.displayName}}</a></td>
