--- a/roadrecon/frontend/src/app/appnav/appnav.component.html
+++ b/roadrecon/frontend/src/app/appnav/appnav.component.html
@@ -7,7 +7,7 @@
         *ngIf="isHandset$ | async">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span [routerLink]="'/'">ROADrecon</span>
+      <span [routerLink]="'/'"><img class="rtlogo" src="/assets/rt_logoonly_margin.svg" /></span><span [routerLink]="'/'">ROADrecon</span>
       <span class="filler"></span>
       <button
         type="button"
