--- a/roadrecon/frontend/src/app/appnav/appnav.component.less
+++ b/roadrecon/frontend/src/app/appnav/appnav.component.less
@@ -22,3 +22,8 @@ mat-sidenav-container {
 .filler {
   flex: 1 1 auto;
 }
+img.rtlogo {
+  width: 50px;
+  margin-top: 10px;
+  margin-right: 10px;
+}
