--- a/roadrecon/frontend/src/app/appmain/groups/groupsdialog/groupsdialog.component.html
+++ b/roadrecon/frontend/src/app/appmain/groups/groupsdialog/groupsdialog.component.html
@@ -10,7 +10,7 @@
         <tr *ngIf="group.membershipRule != null"><th>Dynamic Membership</th><td>{{ group.membershipRule }}</td></tr>
         <tr *ngIf="group.mail != null"><th>Email</th><td>{{ group.mail }}</td></tr>
         <tr *ngIf="group.createdDateTime != null"><th>Created</th><td>{{ group.createdDateTime }}</td></tr>
-        <tr><th>Account type</th><td>{{ group.dirSyncEnabled? 'Synced with AD':'Cloud-only' }}</td></tr>
+        <tr><th>Group type</th><td>{{ group.dirSyncEnabled? 'Synced with AD':'Cloud-only' }}</td></tr>
       </table>
     </mat-card>
     <mat-divider></mat-divider>
@@ -48,6 +48,21 @@
         </ng-container>
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+    </mat-expansion-panel>
+    <mat-expansion-panel expanded>
+      <mat-expansion-panel-header>
+        <mat-panel-title>
+          Member ServicePrincipals ({{ group.memberServicePrincipals.length }})
+        </mat-panel-title>
+      </mat-expansion-panel-header>
+      <table *ngIf="group.memberServicePrincipals.length > 0" mat-table [dataSource]="group.memberServicePrincipals">
+        <ng-container matColumnDef="displayName">
+          <th mat-header-cell *matHeaderCellDef>displayName</th>
+          <td mat-cell *matCellDef="let row"><a [routerLink]="['/serviceprincipals/', row.objectId]">{{row.displayName}}</a></td>
+        </ng-container>
+        <tr mat-header-row *matHeaderRowDef="displayedColumnsServicePrincipal"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumnsServicePrincipal;"></tr>
       </table>
     </mat-expansion-panel>
   </mat-tab>
