--- a/roadrecon/frontend/src/app/appmain/serviceprincipals/serviceprincipals.component.html
+++ b/roadrecon/frontend/src/app/appmain/serviceprincipals/serviceprincipals.component.html
@@ -8,6 +8,11 @@
       <td mat-cell *matCellDef="let row"><a [routerLink]="['/serviceprincipals/', row.objectId]">{{row.displayName}}</a></td>
     </ng-container>
 
+    <ng-container matColumnDef="servicePrincipalType">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Type</th>
+      <td mat-cell *matCellDef="let row">{{row.servicePrincipalType}}</td>
+    </ng-container>
+
     <ng-container matColumnDef="publisherName">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Publisher</th>
       <td mat-cell *matCellDef="let row">{{row.publisherName}}</td>
