--- a/roadrecon/frontend/src/app/appmain/mfa/mfa.component.html
+++ b/roadrecon/frontend/src/app/appmain/mfa/mfa.component.html
@@ -1,4 +1,7 @@
-<div class="mat-elevation-z8">
+<div>
+   <div class="mat-elevation-z4 pagedescription">
+    This page shows MFA information for all users. The accuracy of this data depends on whether collection was done with a privileged account (Security/Global Reader/Admin) and whether the --mfa flag was specified during data gathering. MFA can be enforced per user or based on conditions via Conditional Access. Per-user MFA can be collected as any user, but uses artifacts that are created when this is assigned, so this may not be fully accurate. Whether a FIDO key is added to an account can also be collected using any user account.
+  </div>
   <mat-form-field>
     <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
   </mat-form-field>
@@ -14,8 +17,13 @@
     </ng-container>
 
     <ng-container matColumnDef="accountEnabled">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Enabled</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Account Enabled</th>
       <td mat-cell *matCellDef="let row"><mat-icon *ngIf="row.accountEnabled" aria-hidden="false" aria-label="Enabled">check</mat-icon></td>
+    </ng-container>
+
+    <ng-container matColumnDef="perusermfa">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Per-user MFA enforced</th>
+      <td mat-cell *matCellDef="let row"><mat-icon *ngIf="row.perusermfa" aria-hidden="false" aria-label="Enabled">check</mat-icon></td>
     </ng-container>
 
     <ng-container matColumnDef="has_app">
@@ -34,8 +42,8 @@
     </ng-container>
 
     <ng-container matColumnDef="mfamethods">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>MFA Methods</th>
-      <td mat-cell *matCellDef="let row"><span *ngIf="row.mfamethods > 0">{{row.mfamethods}}</span></td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Registered MFA Methods</th>
+      <td mat-cell *matCellDef="let row"><span *ngIf="row.mfamethods > 0">{{row.mfamethods}}</span><span *ngIf="row.mfamethods == 0">None</span></td>
     </ng-container>
 
     <ng-container matColumnDef="strongAuthenticationDetail">
