--- a/roadrecon/frontend/src/app/appmain/devices/devicesdialog/devicesdialog.component.html
+++ b/roadrecon/frontend/src/app/appmain/devices/devicesdialog/devicesdialog.component.html
@@ -1,6 +1,37 @@
 <h1 mat-dialog-title>{{ device.displayName }}</h1>
 <mat-dialog-content>
 <mat-tab-group>
+  <mat-tab label="Overview">
+<mat-card>
+      <table class="userTable">
+        <tr><th>Display name</th><td>{{ device.displayName }}</td></tr>
+        <tr><th>ObjectId</th><td>{{ device.objectId }}</td></tr>
+        <tr><th>Device ID</th><td>{{ device.deviceId }}</td></tr>
+      </table>
+    </mat-card>
+    <mat-divider></mat-divider>
+    <mat-expansion-panel *ngIf="device.owner.length > 0"  expanded>
+      <mat-expansion-panel-header>
+        <mat-panel-title>
+          Owners ({{ device.owner.length }})
+        </mat-panel-title>
+      </mat-expansion-panel-header>
+
+      <table mat-table [dataSource]="device.owner" class="full-width-table">
+        <ng-container matColumnDef="displayName">
+          <th mat-header-cell *matHeaderCellDef>Name</th>
+          <td mat-cell *matCellDef="let row"><a [routerLink]="['/users/', row.objectId]">{{row.displayName}}</a></td>
+        </ng-container>
+
+        <ng-container matColumnDef="userPrincipalName">
+          <th mat-header-cell *matHeaderCellDef>userPrincipalName</th>
+          <td mat-cell *matCellDef="let row">{{row.userPrincipalName}}</td>
+        </ng-container>
+        <tr mat-header-row *matHeaderRowDef="displayedColumnsOwners"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumnsOwners;"></tr>
+      </table>
+    </mat-expansion-panel>
+    </mat-tab>
   <mat-tab label="Raw"><p appJsonFormat [json]="device"></p></mat-tab>
 </mat-tab-group>
 </mat-dialog-content>
