--- a/roadrecon/frontend/src/app/appmain/index/index.component.html
+++ b/roadrecon/frontend/src/app/appmain/index/index.component.html
@@ -25,6 +25,29 @@
   </mat-card-actions>
 </mat-card>
 
+<mat-card *ngIf="authorizationPolicy">
+  <mat-card-title>Authorization Policy</mat-card-title>
+  <mat-card-content>
+      <table class="userTable">
+        <tr><th>Self-service password reset enabled</th><td>{{ authorizationPolicy.allowedToUseSSPR? 'Yes':'No' }}</td></tr>
+        <tr><th>MSOnline powershell blocked</th><td>{{ authorizationPolicy.blockMsolPowerShell? 'Yes':'No' }}</td></tr>
+        <tr><th>Default user role permissions</th>
+          <td>
+              <span *ngFor="let setting of authorizationPolicy.defaultUserRolePermissions | keyvalue">{{ setting.key }}: {{ setting.value? 'Yes':'No' }} <br /></span>
+          </td>
+        </tr>
+        <tr *ngIf="authorizationPolicy.permissionGrantPolicyIdsAssignedToDefaultUserRole.length > 0"><th>Default user role permissions</th><td>{{ authorizationPolicy.permissionGrantPolicyIdsAssignedToDefaultUserRole[0] }}</td></tr>
+        <tr><th>Guest access settings</th><td [ngSwitch]="authorizationPolicy.guestUserRoleId">
+          <span *ngSwitchCase="'0b1b346-4d3e-4e8b-98f8-753987be4970'">Same as member users</span>
+          <span *ngSwitchCase="'10dae51f-b6af-4016-8d66-8c2a99b929b3'">Limited access (default)</span>
+          <span *ngSwitchCase="'2af84b1e-32c8-42b7-82bc-daa82404023b'">Restricted access</span>
+          <span *ngSwitchDefault>Unknown: {{ authorizationPolicy.guestUserRoleId }}</span>
+
+        </td></tr>
+      </table>
+  </mat-card-content>
+</mat-card>
+
 <mat-card *ngIf="tenantdetails">
   <mat-card-title>Tenant Domains</mat-card-title>
   <table mat-table [dataSource]="tenantdetails.verifiedDomains">
