--- a/roadrecon/frontend/src/app/appmain/groups/groupsdialog/groupsdialog.component.html
+++ b/roadrecon/frontend/src/app/appmain/groups/groupsdialog/groupsdialog.component.html
@@ -12,11 +12,11 @@
         <tr *ngIf="group.isPublic != null"><th>Public group</th><td>{{ group.isPublic? 'Yes':'No' }}</td></tr>
         <tr *ngIf="group.isAssignableToRole != null"><th>Can be assigned to roles</th><td>{{ group.isAssignableToRole? 'Yes':'No' }}</td></tr>
         <tr *ngIf="group.createdDateTime != null"><th>Created</th><td>{{ group.createdDateTime }}</td></tr>
-        <tr><th>Group type</th><td>{{ group.dirSyncEnabled? 'Synced with AD':'Cloud-only' }}</td></tr>
+        <tr><th>Group source</th><td>{{ group.dirSyncEnabled? 'Synced with AD':'Cloud-only' }}</td></tr>
       </table>
     </mat-card>
     <mat-divider></mat-divider>
-    <mat-expansion-panel expanded>
+    <mat-expansion-panel *ngIf="group.memberOf.length > 0" expanded>
       <mat-expansion-panel-header>
         <mat-panel-title>
           Member of groups ({{ group.memberOf.length }})
@@ -31,6 +31,29 @@
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
       </table>
     </mat-expansion-panel>
+    <mat-expansion-panel *ngIf="group.ownerUsers.length > 0"  expanded>
+      <mat-expansion-panel-header>
+        <mat-panel-title>
+          Owners ({{ group.ownerUsers.length }})
+        </mat-panel-title>
+      </mat-expansion-panel-header>
+
+      <table mat-table [dataSource]="group.ownerUsers" class="full-width-table">
+        <ng-container matColumnDef="displayName">
+          <th mat-header-cell *matHeaderCellDef>Name</th>
+          <td mat-cell *matCellDef="let row"><a [routerLink]="['/users/', row.objectId]">{{row.displayName}}</a></td>
+        </ng-container>
+
+        <ng-container matColumnDef="userPrincipalName">
+          <th mat-header-cell *matHeaderCellDef>userPrincipalName</th>
+          <td mat-cell *matCellDef="let row">{{row.userPrincipalName}}</td>
+        </ng-container>
+        <tr mat-header-row *matHeaderRowDef="displayedColumnsOwners"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumnsOwners;"></tr>
+      </table>
+    </mat-expansion-panel>
+
+
     <mat-expansion-panel expanded>
       <mat-expansion-panel-header>
         <mat-panel-title>
@@ -71,6 +94,66 @@
         </ng-container>
         <tr mat-header-row *matHeaderRowDef="displayedColumnsServicePrincipal"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumnsServicePrincipal;"></tr>
+      </table>
+    </mat-expansion-panel>
+    <mat-expansion-panel expanded>
+      <mat-expansion-panel-header>
+        <mat-panel-title>
+          Member devices ({{ group.memberDevices.length }})
+        </mat-panel-title>
+      </mat-expansion-panel-header>
+      <table *ngIf="group.memberDevices.length > 0" mat-table [dataSource]="group.memberDevices">
+        <ng-container matColumnDef="displayName">
+          <th mat-header-cell *matHeaderCellDef>Name</th>
+          <td mat-cell *matCellDef="let row"><a [routerLink]="['/devices/', row.objectId]">{{row.displayName}}</a></td>
+        </ng-container>
+
+        <ng-container matColumnDef="accountEnabled">
+          <th mat-header-cell *matHeaderCellDef>Enabled</th>
+          <td mat-cell *matCellDef="let row"><mat-icon *ngIf="row.accountEnabled" aria-hidden="false" aria-label="Enabled">check</mat-icon></td>
+        </ng-container>
+
+        <ng-container matColumnDef="deviceManufacturer">
+          <th mat-header-cell *matHeaderCellDef>Manufacturer</th>
+          <td mat-cell *matCellDef="let row">{{row.deviceManufacturer}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="deviceModel">
+          <th mat-header-cell *matHeaderCellDef>Model</th>
+          <td mat-cell *matCellDef="let row">{{row.deviceModel}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="deviceOSType">
+          <th mat-header-cell *matHeaderCellDef>OS</th>
+          <td mat-cell *matCellDef="let row">{{row.deviceOSType}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="deviceOSVersion">
+          <th mat-header-cell *matHeaderCellDef>OS Version</th>
+          <td mat-cell *matCellDef="let row">{{row.deviceOSVersion}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="deviceTrustType">
+          <th mat-header-cell *matHeaderCellDef>Trust type</th>
+          <td mat-cell *matCellDef="let row">{{row.deviceTrustType}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="isCompliant">
+          <th mat-header-cell *matHeaderCellDef>Compliant</th>
+          <td mat-cell *matCellDef="let row"><mat-icon *ngIf="row.isCompliant" aria-hidden="false" aria-label="Compliant">check</mat-icon></td>
+        </ng-container>
+
+        <ng-container matColumnDef="isManaged">
+          <th mat-header-cell *matHeaderCellDef>Managed</th>
+          <td mat-cell *matCellDef="let row"><mat-icon *ngIf="row.isManaged" aria-hidden="false" aria-label="Managed">check</mat-icon></td>
+        </ng-container>
+
+        <ng-container matColumnDef="isRooted">
+          <th mat-header-cell *matHeaderCellDef>Rooted</th>
+          <td mat-cell *matCellDef="let row"><mat-icon *ngIf="row.isRooted" aria-hidden="false" aria-label="Rooted">check</mat-icon></td>
+        </ng-container>
+        <tr mat-header-row *matHeaderRowDef="displayedColumnsDevices"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumnsDevices;"></tr>
       </table>
     </mat-expansion-panel>
   </mat-tab>
