--- a/roadrecon/frontend/src/app/appmain/groups/groupsdialog/groupsdialog.component.html
+++ b/roadrecon/frontend/src/app/appmain/groups/groupsdialog/groupsdialog.component.html
@@ -19,13 +19,19 @@
     <mat-expansion-panel *ngIf="group.memberOf.length > 0" expanded>
       <mat-expansion-panel-header>
         <mat-panel-title>
-          Member of groups ({{ group.memberOf.length }})
+          Group memberships (parent groups) ({{ group.memberOf.length }})
         </mat-panel-title>
       </mat-expansion-panel-header>
 
       <table mat-table [dataSource]="group.memberOf">
-        <mat-text-column name="displayName"></mat-text-column>
-        <mat-text-column name="description"></mat-text-column>
+        <ng-container matColumnDef="displayName">
+          <th mat-header-cell *matHeaderCellDef>Name</th>
+          <td mat-cell *matCellDef="let row"><a [routerLink]="['/groups/', row.objectId]">{{row.displayName}}</a></td>
+        </ng-container>
+        <ng-container matColumnDef="description">
+          <th mat-header-cell *matHeaderCellDef>Description</th>
+          <td mat-cell *matCellDef="let row">{{row.description}}</td>
+        </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
@@ -57,7 +63,7 @@
     <mat-expansion-panel expanded>
       <mat-expansion-panel-header>
         <mat-panel-title>
-          Members ({{ group.memberUsers.length }})
+          Member users ({{ group.memberUsers.length }})
         </mat-panel-title>
       </mat-expansion-panel-header>
 
@@ -79,6 +85,27 @@
 
         <tr mat-header-row *matHeaderRowDef="displayedColumnsUsers"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumnsUsers;"></tr>
+      </table>
+    </mat-expansion-panel>
+    <mat-expansion-panel *ngIf="group.memberGroups.length > 0" expanded>
+      <mat-expansion-panel-header>
+        <mat-panel-title>
+          Member groups (subgroups) ({{ group.memberGroups.length }})
+        </mat-panel-title>
+      </mat-expansion-panel-header>
+
+      <table mat-table [dataSource]="group.memberGroups">
+        <ng-container matColumnDef="displayName">
+          <th mat-header-cell *matHeaderCellDef>Name</th>
+          <td mat-cell *matCellDef="let row"><a [routerLink]="['/groups/', row.objectId]">{{row.displayName}}</a></td>
+        </ng-container>
+        <ng-container matColumnDef="description">
+          <th mat-header-cell *matHeaderCellDef>Description</th>
+          <td mat-cell *matCellDef="let row">{{row.description}}</td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
       </table>
     </mat-expansion-panel>
     <mat-expansion-panel expanded>
