--- a/roadrecon/frontend/src/app/appmain/groups/groupsdialog/groupsdialog.component.less
+++ b/roadrecon/frontend/src/app/appmain/groups/groupsdialog/groupsdialog.component.less
@@ -1,4 +1,4 @@
-td.mat-cell, th.mat-cell {
+td.mat-cell, th.mat-cell, td.mat-header-cell, th.mat-header-cell {
   padding-right: 10px;
 }
 .userTable th {
