--- a/roadrecon/frontend/src/app/appmain/index/index.component.html
+++ b/roadrecon/frontend/src/app/appmain/index/index.component.html
@@ -7,6 +7,7 @@
         <tr><th>Applications</th><td>{{ tenantstats.countApplications }}</td></tr>
         <tr><th>ServicePrincipals</th><td>{{ tenantstats.countServicePrincipals }}</td></tr>
         <tr><th>Devices</th><td>{{ tenantstats.countDevices }}</td></tr>
+        <tr><th>Administrative Units</th><td>{{ tenantstats.countAdministrativeUnits }}</td></tr>
       </table>
   </mat-card-content>
 </mat-card>
