--- a/roadrecon/frontend/src/app/appnav/appnav.component.html
+++ b/roadrecon/frontend/src/app/appnav/appnav.component.html
@@ -29,6 +29,7 @@
       <a mat-list-item [routerLink]="'/groups'">Groups</a>
       <a mat-list-item [routerLink]="'/devices'">Devices</a>
       <mat-divider></mat-divider>
+      <a mat-list-item [routerLink]="'/administrativeunits'">Administrative Units</a>
       <a mat-list-item [routerLink]="'/directoryroles'">Directory roles</a>
       <mat-divider></mat-divider>
       <a mat-list-item [routerLink]="'/applications'">Applications</a>
